@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [GH#629][NSE] Added two new fingerprints to http-default-accounts
+  (APC Management Card, older NetScreen ScreenOS) [xelphene, nposter]
+
 o [GH#716][NSE] Fix for oracle-tns-version which was sending an invalid TNS
   probe due to a string escaping mixup. [Alexandr Savca]
 
